samples/_failures_safe/1761326962_c103a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_888a41a1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_888a41a1.c:165:33: error: expected ‘;’ at end of input
  165 |         tokens[token_count].type
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_888a41a1.c:165:9: error: expected declaration or statement at end of input
  165 |         tokens[token_count].type
      |         ^~~~~~
./samples/SAFE/__tmp_888a41a1.c:165:9: error: expected declaration or statement at end of input
